# ambient-mixer-sdl

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
src/: CMakeLists.txt  ambientplayer.cpp  ambientplayer.h  button.cpp  button.h  channel.h  game.cpp  mainlogic.cpp  mainlogic.h  mainscreen.cpp  mainscreen.h  playerthread.cpp  playerthread.h  preset_parser.cpp  preset_parser.h  randomtrigger.cpp  randomtrigger.h  randomunit.cpp  randomunit.h  utils.cpp  utils.h
test/: CMakeLists.txt  parsing.cpp
